Actualizando anotaciones swagger
