# docs/swagger.json
@@ -1,10 +1,111 @@
 {
     "swagger": "2.0",
     "info": {
-        "description": "Esta API Handle Odontologos, Pacientes and Turnos",
-        "title": "Desafio Go Backend 3",
+        "description": "Esta API maneja Odontólogos, Pacientes y Turnos",
+        "title": "Desafío Go Backend 3",
         "contact": {},
         "version": "1.0"
     },
-    "paths": {}
+    "paths": {
+        "/odontologos/{id}": {
+            "get": {
+                "description": "Obtiene un odontólogo por su id",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "Odontologos"
+                ],
+                "summary": "Obtener odontólogo por id",
+                "parameters": [
+                    {
+                        "type": "integer",
+                        "description": "ID del odontólogo",
+                        "name": "id",
+                        "in": "path",
+                        "required": true
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/domain.Odontologo"
+                        }
+                    },
+                    "400": {
+                        "description": "ID inválido",
+                        "schema": {
+                            "type": "string"
+                        }
+                    },
+                    "404": {
+                        "description": "Odontólogo no encontrado",
+                        "schema": {
+                            "type": "string"
+                        }
+                    }
+                }
+            }
+        }
+    },
+    "definitions": {
+        "domain.Odontologo": {
+            "type": "object",
+            "required": [
+                "apellido",
+                "matricula",
+                "nombre"
+            ],
+            "properties": {
+                "apellido": {
+                    "type": "string"
+                },
+                "id": {
+                    "type": "integer"
+                },
+                "matricula": {
+                    "type": "integer"
+                },
+                "nombre": {
+                    "type": "string"
+                },
+                "turnos": {
+                    "type": "array",
+                    "items": {
+                        "$ref": "#/definitions/domain.Turno"
+                    }
+                }
+            }
+        },
+        "domain.Turno": {
+            "type": "object",
+            "required": [
+                "descripcion",
+                "fechaHora",
+                "odontologoId",
+                "pacienteId"
+            ],
+            "properties": {
+                "descripcion": {
+                    "type": "string"
+                },
+                "fechaHora": {
+                    "type": "string"
+                },
+                "id": {
+                    "type": "integer"
+                },
+                "odontologoId": {
+                    "type": "integer"
+                },
+                "pacienteId": {
+                    "type": "integer"
+                }
+            }
+        }
+    }
 }
